2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>

	* FinalizersShouldCallBaseClassFinalizerTest.cs:Replaced TypeDefinition.GetFinalizer
	with TypeDefinition.GetMethod for avoid some warnings when compiling.

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideAlternativeNamesForOperatorOverloadsTest.cs: Add 
	"override Equals" in EverythingIsThere class.

2008-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* TypesShouldBeInsideNamespacesTest.cs: Adapt nested types test 
	cases because we don't report them anymore.

2008-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementEqualsAndGetHashCodeInPairTest.cs: Tests (updated and) 
	moved from BadPractice.

2008-01-18  Sebastien Pouliot  <sebastien@ximian.com>

	* EnsureSymmetryForOverloadedOperatorsTest.cs: New. Unit tests by 
	Andreas Noever
	* OperatorEqualsShouldBeOverloadedTest.cs: New. Unit tests by 
	Andreas Noever
	* OverrideEqualsMethodTest.cs: New. Unit tests by Andreas Noever
	* ProvideAlternativeNamesForOperatorOverloadsTest.cs: New. Unit 
	tests by Andreas Noever

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* FinalizersShouldBeProtectedTest.cs: New. Unit tests by Daniel 
	Abramov
	* FinalizersShouldCallBaseClassFinalizerTest.cs: New. Unit tests by 
	Daniel Abramov
	* Test.Rules.Design.mdp: Added new tests to MD project file.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* DisposableFieldsShouldBeDisposedTest.cs: Add test case for static 
	fields.
	* DisposableTypesShouldHaveFinalizerTest.cs: Add test case for 
	static fields.
	* TypesWithDisposableFieldsShouldBeDisposableTest.cs: Add test 
	cases for structs and static fields.
	* TypesWithNativeFieldsShouldBeDisposableTest.cs: Add test cases 
	for structs and static fields.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: New. Unit tests by 
	Andreas Noever.
	* DisposableTypesShouldHaveFinalizerTest.cs: New. Unit tests by 
	Andreas Noever.