@@ -32,6 +32,13 @@
     <File name="TypesWithNativeFieldsShouldBeDisposableTest.cs" subtype="Code" buildaction="Compile" />
     <File name="FinalizersShouldBeProtectedTest.cs" subtype="Code" buildaction="Compile" />
     <File name="FinalizersShouldCallBaseClassFinalizerTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AttributeArgumentsShouldHaveAccessorsTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="EnsureSymmetryForOverloadedOperatorsTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="EnumsShouldUseInt32Test.cs" subtype="Code" buildaction="Compile" />
+    <File name="ImplementEqualsAndGetHashCodeInPairTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="OperatorEqualsShouldBeOverloadedTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="OverrideEqualsMethodTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="ProvideAlternativeNamesForOperatorOverloadsTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/Mono.Cecil.dll" />
